# moto

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Doxyfile  agent.md  generic_projection.md  heaptrack.double_integrator_test.141697.zst  heaptrack.double_integrator_test.145063.zst  log  log_new  log_new_single  log_new_soft  main.cpp  normal_iteration.md  normal_vs_restoration.md  plans.md  readme.md  refactor.md  restoration.md  restoration_explicit_checkpoint.md  test.cpp  test_lbfgs.py  test_linear.py  test_linear_ipopt.py
benchmark/: go2_test.py  test.cpp  test.py  ur5_test.py
binding/: CMakeLists.txt
binding/casadi_eigen/: CMakeLists.txt  invoke_interface.cpp
binding/casadi_eigen/test/: gen.py  test.py
bindings/: CMakeLists.txt  __init__.py  binding_fwd.hpp  common.py  setup_bindings.cpp  type_cast.hpp
bindings/casadi_eigen/: CMakeLists.txt  __init__.py  codegen.py  invoke_interface.cpp
bindings/casadi_eigen/test/: gen.py  test.py
bindings/codegen/: codegen.cpp  generate_n_compile.py  invoke_interface.cpp
bindings/definition/: fields.cpp  functional.cpp  model.cpp  multibody.cpp  node_data.cpp  ns_sqp.cpp  shared_object.py  shifted_array.py  sqp.py  sym.py  sym_type_caster.hpp  symvar.py  var.py
cmake/: docHelpers.cmake  installHelpers.cmake
docs/: normal_vs_restoration.md  restoration.md
example/: CMakeLists.txt
example/arm/: CMakeLists.txt  gen.py  ipopt_test.py  run.py
example/arm/src/: main.cpp
example/biped_srbd/: CMakeLists.txt
example/biped_srbd/include/: dynamics.hpp
example/biped_srbd/src/: main.cpp
example/double_integrator/: CMakeLists.txt
example/double_integrator/src/: main.cpp
example/iiwa14/: run.py
example/lcid/: CMakeLists.txt
example/lcid/src/: main.cpp
example/quadruped/: mpc.py  quaternion_test.py  run.py
example/toy/: box_api_demo.py  restoration_feasible_bad_init.py  restoration_feasible_from_infeasible_init.py  restoration_ill_conditioned.py  restoration_infeasible.py  run.py
include/atri/common/: fwd.hpp
include/atri/core/: approximation.hpp  array.hpp  data_types.hpp  directed_graph.hpp  enums.hpp  expr.hpp  expression_base.hpp  external_function.hpp  fields.hpp  fwd.hpp  graph.hpp  offset_array.hpp  parallel_job.hpp  sparsity.hpp
include/atri/eval/: external_function.hpp
include/atri/ocp/: approx.hpp  approx_storage.hpp  approximation.hpp  constr.hpp  cost.hpp  data_mgr.hpp  dynamics.hpp  expr_collection.hpp  expr_set.hpp  expr_sets.hpp  func.hpp  node_data.hpp  pre_comp.hpp  problem.hpp  problem_formulation.hpp  shooting_node.hpp  sym_data.hpp  usr_func.hpp
include/atri/solver/: cslq.hpp  csqp.hpp  fwd.hpp  ns_node.hpp  ns_riccati_data.hpp  ns_riccati_solve.hpp  ns_riccati_solver.hpp  ns_sqp.hpp
include/atri/utils/: codegen.hpp  eigen_fmt.h  print.hpp  timed_block.hpp
include/manbo/common/: fwd.hpp  multi_linked_list_item.hpp
include/manbo/core/: approximation.hpp  data_types.hpp  enums.hpp  expression_base.hpp  multivariate.hpp  ocp.hpp  problem_formulation.hpp  shooting_node.hpp  sparsity.hpp
include/manbo/eval/: casadi_support.hpp
include/manbo/ocp/: problem_formulation.hpp  shooting_node.hpp
include/moto/core/: array.hpp  directed_graph.hpp  expr.hpp  external_function.hpp  fields.hpp  fwd.hpp  parallel_job.hpp  sparsity.hpp  workspace_data.hpp
include/moto/model/: graph_model.hpp
include/moto/multibody/: euler.hpp  fwd.hpp  lcid.hpp  quaternion.hpp
include/moto/ocp/: approx_storage.hpp  constr.hpp  cost.hpp  data_mgr.hpp  dynamics.hpp  func.hpp  graph_model.hpp  ineq_constr.hpp  node_data.hpp  pre_comp.hpp  problem.hpp  projector_layout.hpp  shooting_node.hpp  soft_constr.hpp  sym.hpp  sym_data.hpp  usr_func.hpp
include/moto/solver/: data_base.hpp  ineq_soft.hpp  ineq_soft_solve.hpp  ipm.hpp  ipm_constr.hpp  lbfgs.hpp  line_search.hpp  linear_runtime_graph.hpp  linesearch_config.hpp  ns_riccati_data.hpp  ns_riccati_solve.hpp  ns_sqp.hpp  nullspace_data.hpp  solver_data.hpp  solver_setting.hpp
include/moto/spmm/: fwd.hpp  panel_mat.hpp  sparse_mat.hpp
include/moto/utils/: blasfeo_factorization.hpp  clone_traits.hpp  codegen.hpp  codegen_bind.hpp  eigen_fmt.h  field_conversion.hpp  func_traits.hpp  movable_ptr.hpp  optional_boolean.hpp  print.hpp  shared.hpp  timed_block.hpp  tri_state.hpp  unique.hpp  unique_id.hpp
moto/: __init__.py
rsc/go2_description/urdf/: box_description.urdf
rsc/iiwa_description/urdf/: iiwa14.urdf
src/: approx.cpp  constr.cpp  cslq.cpp  csqp.cpp  expression_base.cpp  ns_sqp.cpp  shooting_node.cpp
src/core/: approx.cpp  expr.cpp  expression_base.cpp  expression_static_init.cpp  external_function.cpp  problem_data.cpp  shooting_node.cpp
src/multibody/: euler.cpp  lcid.cpp  quaternion.cpp  stacked_euler.cpp
src/multibody/impl/: euler.cpp  euler_from_urdf.cpp
src/ocp/: approx_storage.cpp  constr.cpp  cost.cpp  dense_approx_data.cpp  dynamics.cpp  func_data.cpp  func_impl.cpp  graph_model.cpp  ineq_constr.cpp  ineq_soft_constr.cpp  ineq_soft_reflect.cpp  merit_data.cpp  node_data.cpp  problem.cpp  projector_layout.cpp  shared_data.cpp  shooting_node_and_data.cpp  soft_constr.cpp  sparse_approx.cpp  sym_impl.cpp
src/solver/: backward.cpp  data_base.cpp  ineq_soft_impl.cpp  ineq_soft_reflect.cpp  ineq_soft_solve.cpp  ipm_constr.cpp  ns_riccati_data.cpp  ns_sqp.cpp  ns_sqp_impl.cpp  postsolve.cpp  presolve.cpp  rollout.cpp  solver_data.cpp
src/spmm/: spmm.cpp  spmm_binary_op.cpp  spmm_unary_op.cpp
src/utils/: codegen.cpp  codegen_bind.cpp  field_conversion.cpp  md5.cpp  print.cpp  timed_block.cpp
unittests/: CMakeLists.txt  blasfeo_factor.cpp  constr_cast.cpp  dynamics.cpp  dynamics_cen.cpp  equality_multiplier_init.cpp  expr_cast.cpp  expr_ownership.cpp  external_function.cpp  field_conversion.cpp  graph_model_compose.cpp  ineq_jac_sparsity.cpp  multibody_euler.cpp  projection_dense_reference.cpp  projector_layout_python.py  restoration.cpp  spmm.cpp  sym_test.cpp  symbolic_comp.cpp
unittests/python/: restoration_feasible_bad_init_probe.py  restoration_feasible_ill_conditioned_probe.py  restoration_infeasible_probe.py
(+114 files in other folders)
